--- a/Home.html
+++ b/Home.html
@@ -16,7 +16,7 @@
      <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="nav navbar-nav">
         <li class="nav-item active">
-         <a class="nav-link" id="content2" href="#Home">HOME</a>
+         <a class="nav-link" href="#Home">HOME</a>
        </li>
 
        <li class="nav-item active">
@@ -276,8 +276,6 @@
 <script src="https://code.jquery.com/jquery-3.4.1.js"integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
 crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
-<script src="Home.js" type="text/javascript"></script>
 
 </body>
 </html>
